--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -13,16 +13,15 @@
     position: absolute;
     left: 0;
     top: 150px;
-    width: 60px;
-    height: 20px;
     margin: 20px;
     padding: 15px;
     border-radius: 5px;
-    color: white;
-    background-color: var(--secondary);
+    color: var(--secondary);
+
     &:hover {
       cursor: pointer;
       background-color: rgba(128, 128, 128, 0.212);
+      border-radius: 50%;
     }
   }
 
@@ -36,9 +35,9 @@
       cursor: pointer;
     }
   }
-   .back-button__mobile{
+  .back-button__mobile {
     display: none;
-   }
+  }
 }
 h3 {
   margin-bottom: 25px;
@@ -46,8 +45,8 @@ h3 {
 a {
   color: var(--secondary);
 }
-.contentLeft{
-  margin-bottom: 250px;
+.contentLeft {
+  margin-bottom: 120px;
 }
 .contentRight {
   margin-top: 250px;
@@ -68,18 +67,17 @@ a {
     gap: 50px;
     .contentRight {
       text-align: center;
-      margin:0;
+      margin: 0;
     }
-    .contentLeft{
-      margin:0;
+    .contentLeft {
+      margin: 0;
     }
-     .backNavigation {
+    .backNavigation {
       display: none;
     }
-    img{
-        max-width: 150px;
-        position: relative;
-
+    img {
+      max-width: 150px;
+      position: relative;
     }
     .back-button__mobile {
       width: 100%;
